--- a/index.html
+++ b/index.html
@@ -8,6 +8,28 @@
 
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <script src="js/forms_canvas.js"></script>
   </head>
-  <body></body>
+  <body>
+    <canvas class="jogo"></canvas>
+  </body>
+  <script>
+    const canvas = document.querySelector(".jogo");
+
+    document.addEventListener("DOMContentLoaded", () => {
+      //   jogo.update();
+      setInterval(() => {
+        // console.log(jogo._canvas);
+        if (jogo._canvas == null) {
+          jogo.set_canvas(canvas, 600, 200);
+        }
+        jogo.update();
+      }, 1000 / 60);
+    });
+
+    canvas.onclick = (e) => {
+      //   jogo.desenhaCirculo(e.offsetX, e.offsetY, 10, colors.red);
+      console.log(e.offsetX, e.offsetY);
+    };
+  </script>
 </html>
