--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
     <script src="js/forms_canvas.js"></script>
+    <script src="js/palavras.js"></script>
   </head>
   <body>
     <canvas class="jogo"></canvas>
@@ -26,6 +27,8 @@
         jogo.update();
       }, 1000 / 60);
     });
+
+    console.log(palavras.sorteiaPalavra());
 
     canvas.onclick = (e) => {
       //   jogo.desenhaCirculo(e.offsetX, e.offsetY, 10, colors.red);
