--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
     <script src="js/forms_canvas.js"></script>
-    <script src="js/palavras.js"></script>
+    <script src="js/tecladoInterceptor.js"></script>
   </head>
   <body>
     <canvas class="jogo"></canvas>
@@ -27,6 +27,8 @@
         jogo.update();
       }, 1000 / 60);
     });
+
+    document.addEventListener("keydown", getTeclado);
 
     canvas.onclick = (e) => {
       //   jogo.desenhaCirculo(e.offsetX, e.offsetY, 10, colors.red);
