Separando a lógica do jogo da de desenho em cavas.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="js/forms_canvas.js"></script>
     <script src="js/tecladoInterceptor.js"></script>
     <script src="js/dicionarioHandler.js"></script>
+    <script src="js/jogo.js"></script>
   </head>
   <body>
     <p id="palavrasTentadas"></p>
