Usando um txt com todas as palavras brasileiras e consultando o significado pela api.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/index.css" />
     <script src="js/forms_canvas.js"></script>
     <script src="js/tecladoInterceptor.js"></script>
+    <script src="js/palavras.js"></script>
     <script src="js/dicionarioHandler.js"></script>
     <script src="js/jogo.js"></script>
   </head>
