--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
   <body>
     <p id="palavrasTentadas"></p>
 
-    <canvas class="jogo"></canvas>
+    <div class="c-center">
+      <canvas class="jogo"></canvas>
+      <div id="loading" class="c-center">
+        <h1>Carregando...</h1>
+        <div class="circle"></div>
+      </div>
+    </div>
     <div id="dicionario">
       <h1>Dicionário</h1>
       <h3 id="palavra"></h3>
