--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="js/palavras.js"></script>
     <script src="js/dicionarioHandler.js"></script>
     <script src="js/jogo.js"></script>
+    <script src="js/invokeKeyboard.js"></script>
   </head>
   <body>
     <p id="palavrasTentadas"></p>
@@ -24,6 +25,7 @@
         <div class="circle"></div>
       </div>
     </div>
+    <div class="keyboard"></div>
     <div id="dicionario">
       <h1>Dicionário</h1>
       <h3 id="palavra"></h3>
@@ -33,6 +35,7 @@
   </body>
   <script>
     const canvas = document.querySelector(".jogo");
+    createKeyboard();
 
     document.addEventListener("DOMContentLoaded", () => {
       // jogo.update();
